--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -2,22 +2,50 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <name>snail-demos</name>
+    <description>Example Demo of snail log.</description>
+    <url>https://github.com/nineya/snail-log/demos</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <artifactId>demos</artifactId>
     <parent>
         <groupId>com.nineya.slog</groupId>
         <artifactId>snail-log</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demos</artifactId>
+    <properties>
+        <skipDeploy>true</skipDeploy>
+    </properties>
+
     <dependencies>
         <dependency>
-            <groupId>com.nineya</groupId>
+            <groupId>com.nineya.slog</groupId>
             <artifactId>slog-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${SlogCoreVersion}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
 
+    <developers>
+        <developer>
+            <name>nineya</name>
+            <email>lswang@nineya.com</email>
+            <organization>nineya</organization>
+            <organizationUrl>https://blog.nineya.com</organizationUrl>
+        </developer>
+    </developers>
 
+    <scm>
+        <connection>scm:git:git@github.com:nineya/snail-log.git</connection>
+        <developerConnection>scm:git:git@github.com:nineya/snail-log.git</developerConnection>
+        <url>git@github.com:nineya/snail-log.git</url>
+    </scm>
 </project>
