添加了基础的Markdown文档打印实现

--- a/demos/src/main/resources/slog.properties
+++ b/demos/src/main/resources/slog.properties
@@ -4,7 +4,7 @@ slog.rootLogger.level = INFO
 slog.sys.level=DEBUG
 # slog.sys.parent=root
 slog.sys.appender=com.nineya.slog.appender.ConsoleAppender
-slog.sys.appender.attribute.fileName=sys.log
-slog.sys.appender.layout=com.nineya.slog.layout.PatternLayout
-slog.sys.appender.layout.conversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%p]-[Thread: %t]-[%C.%M()]: %m%n
-slog.sys.class.com.nineya.slogtest=OFF
+slog.sys.appender.attribute.fileName=sys.md
+slog.sys.appender.layout=com.nineya.slog.layout.MarkdownLayout
+slog.sys.appender.layout.conversionPattern=[%p]-[Thread: %t]-[%C.%M()]: %m%n
+slog.sys.class.com.nineya.slog=ON
