添加了Logger过滤器的实现，修复了bug

--- a/demos/src/main/resources/slog.properties
+++ b/demos/src/main/resources/slog.properties
@@ -1,11 +1,17 @@
-slog.config.loggerOpen = sys
-slog.rootLogger.level = INFO
+slog.config.loggerOpen=sys
+slog.rootLogger.level=INFO
 
 slog.sys.level=DEBUG
 # slog.sys.parent=root
+slog.sys.filter.0=com.nineya.slog.filter.LevelFilter
+slog.sys.filter.0.Level=WARN
 slog.sys.appender=com.nineya.slog.appender.SimpleFileAppender
+slog.sys.appender.name=sysAppender
 slog.sys.appender.attribute.DatePattern='.'s'.md'
 slog.sys.appender.attribute.FileName=sys.md
 slog.sys.appender.layout=com.nineya.slog.layout.MarkdownLayout
-slog.sys.appender.layout.ConversionPattern=[%p]-[Thread: %t]-[%C.%M()]: %m%n
-slog.sys.class.com.nineya.slog=ON
+slog.sys.appender.layout.ConversionPattern=[%p]-[Thread: %t]-[%C.%M()]: %m
+slog.sys.appender.filter.0=com.nineya.slog.filter.LevelFilter
+slog.sys.appender.filter.0.Level=ERROR
+
+slog.class.sys.com.nineya.slog=ON
