--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
                         <version>${gpg.plugin.version}</version>
                         <executions>
                             <execution>
-                                <phase>verify</phase>
+                                <phase>site</phase>
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
