--- a/demos/src/main/resources/filter-logger.properties
+++ b/demos/src/main/resources/filter-logger.properties
@@ -1,17 +1,22 @@
-slog.config.loggerOpen=sys
-slog.rootLogger.level=INFO
+# 设置使用的logger记录器，和rootLogger的Level
+slog.config.loggerOpen=logfilter,appfilter
+slog.rootLogger.level=ALL
 
-slog.sys.level=DEBUG
-# slog.sys.parent=root
-slog.sys.filter.0=com.nineya.slog.filter.LevelFilter
-slog.sys.filter.0.Level=WARN
-slog.sys.appender=com.nineya.slog.appender.SimpleFileAppender
-slog.sys.appender.name=sysAppender
-slog.sys.appender.attribute.DatePattern='.'s'.md'
-slog.sys.appender.attribute.FileName=sys.md
-slog.sys.appender.layout=com.nineya.slog.layout.MarkdownLayout
-slog.sys.appender.layout.ConversionPattern=[%p]-[Thread: %t]-[%C.%M()]: %m
-slog.sys.appender.filter.0=com.nineya.slog.filter.LevelFilter
-slog.sys.appender.filter.0.Level=ERROR
+# 全局Filter
+slog.filter.0=com.nineya.slog.filter.LevelFilter
+slog.filter.0.Level=DEBUG
 
-slog.class.sys.com.nineya.slog=ON
+# logger Filter
+slog.logfilter.level=DEBUG
+slog.logfilter.filter.0=com.nineya.slog.filter.LevelFilter
+slog.logfilter.filter.0.Level=WARN
+
+# appender filter
+slog.appfilter.level=DEBUG
+slog.appfilter.filter.0=com.nineya.slog.filter.LevelFilter
+slog.appfilter.filter.0.Level=WARN
+slog.appfilter.appender=com.nineya.slog.appender.ConsoleAppender
+slog.appfilter.appender.layout=com.nineya.slog.layout.PatternLayout
+slog.appfilter.appender.layout.ConversionPattern=[%p]-[Thread: %t]: %m
+slog.appfilter.appender.filter.0=com.nineya.slog.filter.LevelFilter
+slog.appfilter.appender.filter.0.Level=ERROR
