添加了指定日志文件最大大小功能

--- a/demos/src/main/resources/slog.properties
+++ b/demos/src/main/resources/slog.properties
@@ -9,6 +9,7 @@ slog.sys.appender=com.nineya.slog.appender.SimpleFileAppender
 slog.sys.appender.name=sysAppender
 slog.sys.appender.attribute.DatePattern='.'s'.md'
 slog.sys.appender.attribute.FileName=sys.md
+slog.sys.appender.attribute.FileNSize=8M
 slog.sys.appender.layout=com.nineya.slog.layout.MarkdownLayout
 slog.sys.appender.layout.ConversionPattern=[%p]-[Thread: %t]-[%C.%M()]: %m
 slog.sys.appender.filter.0=com.nineya.slog.filter.LevelFilter
