--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>com.nineya.slog</groupId>
         <artifactId>snail-log</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>com.nineya.slog</groupId>
             <artifactId>slog-core</artifactId>
-            <version>${SlogCoreVersion}</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
